# leaf-fall

./: .gitignore  README.md
.github/workflows/: ci.yml
PCB/: 3leaf_fall.kicad_pcb  3leaf_fall.kicad_pro  3leaf_fall.kicad_sch  3leaf_fall.step  MDBT42Q - Programming Jig.stl
PCB/Left/: 3leaf_fall.kicad_pcb  3leaf_fall.kicad_sch  3leaf_fall.step
PCB/Left/gerber/: 3leaf_fall-B_Cu.gbl  3leaf_fall-B_Mask.gbs  3leaf_fall-B_Paste.gbp  (+9 more)
PCB/Right/: 3leaf_fall.dxf  3leaf_fall.kicad_pcb  3leaf_fall.kicad_pro  3leaf_fall.kicad_sch  3leaf_fall.step  3leaf_fall_right.step
PCB/gerber/: 3leaf_fall-B_Cu.gbl  3leaf_fall-B_Silkscreen.gbo  3leaf_fall-F_Mask.gts  3leaf_fall-F_Paste.gtp  3leaf_fall-F_Silkscreen.gto  3leaf_fall-NPTH.drl
dongle/: leaf_dongle.kicad_pcb  leaf_dongle.kicad_pro  leaf_dongle.kicad_sch
dongle/gerbers/: leaf_dongle-B_Cu.gbl  leaf_dongle-B_Cu.gbr  leaf_dongle-B_Mask.gbr  leaf_dongle-B_Mask.gbs  leaf_dongle-B_Paste.gbp  leaf_dongle-B_Paste.gbr  leaf_dongle-B_Silkscreen.gbo  leaf_dongle-B_Silkscreen.gbr  leaf_dongle-Edge_Cuts.gbr  leaf_dongle-Edge_Cuts.gm1  leaf_dongle-F_Cu.gbr  leaf_dongle-F_Cu.gtl  leaf_dongle-F_Mask.gbr  leaf_dongle-F_Mask.gts  leaf_dongle-F_Paste.gbr  leaf_dongle-F_Paste.gtp  leaf_dongle-F_Silkscreen.gbr  leaf_dongle-F_Silkscreen.gto  leaf_dongle-NPTH.drl  leaf_dongle-PTH.drl  leaf_dongle-job.gbrjob
firmware/dongle/: CMakeLists.txt  app.overlay  prj.conf
firmware/keyboard/: CMakeLists.txt  app.overlay  app_left.overlay  app_right.overlay  prj.conf
firmware/keyboard/config/: leaf_fold.h
firmware/keyboard/src/: main.c
(+12 files in other folders)
